<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".SigninActivity">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/ic_twitter"
        android:layout_gravity="center"
        app:tint="@color/twitterBlue" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLength="11"
            android:hint="@string/phone"
            android:textColor="@color/grey_80" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/grey_80" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/for_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:fontFamily="@font/lato"
        android:text="@string/forgot_password"
        android:textColor="@color/twitterBlueDarker"
        android:textSize="13sp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round_blue"
        android:id="@+id/login_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_black"
            android:textSize="18sp"
            />

    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_have_account"
            android:textAllCaps="false"
            android:text="@string/new_to_tweeter"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/sighuphere"
            android:textColor="@color/twitterBlue"
            android:layout_toEndOf="@id/tv_have_account"
            android:layout_marginStart="10dp"
            android:textAllCaps="false"
            android:text="@string/sign_up_here"
            android:layout_height="wrap_content"/>

    </RelativeLayout>







</LinearLayout>