<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".introActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_twitter"
            android:layout_gravity="center"
            app:tint="@color/twitterBlue" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_center_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/tv_see_whats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_intro_text"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_see_whats"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_round_blue"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/str_create_account"
            android:textAllCaps="false"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="40dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_have_account"
            android:text="@string/str_have_account"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_login"
            android:textColor="@color/twitterBlue"
            android:layout_toEndOf="@id/tv_have_account"
            android:layout_marginStart="10dp"
            android:textAllCaps="false"
            android:text="@string/login"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>