<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"
        tools:context=".Activities.RegisterActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:textColor="@color/twitterBlue"
            android:fontFamily="@font/lato_black"
            android:textSize="26sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Hey it's me"
            android:textColor="@color/grey_80"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_box"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:textColor="@color/grey_80" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:hint="@string/email"
                android:id="@+id/email_box"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:inputType="phone"
                android:hint="@string/phone"
                android:id="@+id/phone_box"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:hint="@string/password"
                android:maxLength="20"
                android:inputType="textPassword"
                android:id="@+id/pwd_box"/>
        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/grey_80"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:id="@+id/cpwd_box"/>
    </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:id="@+id/addImage_layout"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@color/cardview_dark_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/fac_icon"/>

            <ImageView
                android:id="@+id/crtImage_iv"
                android:layout_width="140dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp" />
        </FrameLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:visibility="gone"
            android:id="@+id/progressbar"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_round_blue"
            android:id="@+id/signup_btn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_black"
                android:textSize="18sp"
                />

        </FrameLayout>
        <TextView
            android:id="@+id/loginhere_tv"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="end"
            android:fontFamily="@font/lato"
            android:text="@string/already_registered_login_here"
            android:textColor="@color/twitterBlue"
            android:textSize="17sp"
            />
    </LinearLayout>



</ScrollView>

